--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<meta neme="viewport" content="width=device-width,initial-scale=1.0">
+<title>Meu Primeiro Site</title>
+<link rel="styfesheet" href="style.css">
+</head>
