--- a/index.html
+++ b/index.html
@@ -6,3 +6,24 @@
 <title>Meu Primeiro Site</title>
 <link rel="styfesheet" href="style.css">
 </head>
+<body>
+    <header>
+        <h1>MATHEUS</h1>
+        <nav>
+            <ul>
+                <li><a href="#sobre">Sobre mim</a></li>
+                <li><a href="#hobbies">Hobbies</a></li>
+                <li><a href="#contato">Contato</a></li>
+                </ul>
+        </nav>
+    </header>
+    <main>
+        <section id=""sobre">
+          
+            
+
+
+
+            <h2>meus hobbies<h2>
+            <ul>
+            </ul> <li>jogar free fire</li>
