--- a/index.html
+++ b/index.html
@@ -19,11 +19,16 @@
     </header>
     <main>
         <section id=""sobre">
-          
-            
-
-
-
-            <h2>meus hobbies<h2>
+        <h2>SOBRE MIM</h2>
+        <img src="">
+        <p>Meu nome e matheus moro em um sitio com meus pais
+        </section>
+        <section id="hobbies">
+            <h2>Meus Hobbies</h2>
             <ul>
-            </ul> <li>jogar free fire</li>
+                <li><o meu hobbie e jogar free fire</li>
+                <li>meu segundo hobbie e jogar roblox</li>
+                <li>Meu terceiro hobbie e jogar no meu ps5</li>
+                </ul>
+            </section>
+            <section id="contato"
