--- a/index.html
+++ b/index.html
@@ -31,4 +31,13 @@
                 <li>Meu terceiro hobbie e jogar no meu ps5</li>
                 </ul>
             </section>
-            <section id="contato"
+            <section id="contato">
+                <h2>CONTATO</h2>
+                <p>VOCÊ PODE FALAR COMIGO PELO INSTAGRAM:@bisola_matheus</p>
+                </section>
+            </main>
+            <footer>
+                <p>2025 MATHEUS BISOLA.Todos os direitos reservados</p>
+            </footer>
+</body>
+</html>            
